fixed: small overlapping bugs

--- a/style/_search.scss
+++ b/style/_search.scss
@@ -8,9 +8,11 @@
   justify-content: stretch;
   font-weight: bold;
   z-index: 1;
+  border-bottom: 1px solid $paper-white;
 
   @media (prefers-color-scheme: dark) {
     background: $carbon-black;
+    border-bottom: 1px solid lighten($carbon-black, 15%);
   }
 
   .label {
